--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -10,12 +10,30 @@
 }
 
 img {
-    width: 100%;
     object-fit: cover;
     user-select: none;
 }
 
 .container {
-    max-width: 1140px;
-    padding: 250px 0;
+    max-width: 1140rem;
+    margin: auto;
+}
+
+.section {
+    padding: 25rem 0;
+}
+
+body {
+    height: 300vh;
+}
+
+.button--primary {
+    width: 7.6rem;
+    height: 3rem;
+    font-size: 1.2rem;
+    border-radius: 1.5rem;
+    background-color: $blueF6;
+    text-align: center;
+    line-height: 3rem;
+    color: #f9fafb;
 }
