Feat: banner 텍스트 영역 구현

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,13 @@
 @import './abstracts/variables'; // 변수
 
 @import './base/common'; // 공통
+@import './base/keyframes'; // 애니메이션
 @import './base/reset'; // 리셋
 @import './base/typography'; // 글꼴
 
+@import './components/button'; // 버튼
+
 @import './layout/header'; // 헤더
+@import './layout/visual'; // 비쥬얼
+@import './layout/banner'; // 배너
 @import './layout/footer'; // 푸터
