--- a/src/styles/abstracts/_keyframes.scss
+++ b/src/styles/abstracts/_keyframes.scss
@@ -33,3 +33,15 @@
         opacity: 0;
     }
 }
+
+@keyframes showTopAnimation {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
