--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -12,3 +12,37 @@ br {
         display: inline;
     }
 }
+
+.title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    line-height: 1.3;
+    color: $blueF6;
+    margin-bottom: 3rem;
+    @include bp640 {
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+    }
+}
+
+.sub-title {
+    font-size: 5rem;
+    font-weight: 700;
+    line-height: 1.4;
+    color: $black28;
+    white-space: pre-line;
+    @include bp640 {
+        font-size: 2.8rem;
+    }
+}
+
+.disc {
+    font-size: 2.3rem;
+    font-weight: 600;
+    color: rgba(51, 61, 75, 1);
+    line-height: 1.5;
+    white-space: pre-line;
+    @include bp640 {
+        font-size: 1.7rem;
+    }
+}
