Feat: 송금 섹션 완성

--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -19,11 +19,7 @@ img {
     margin: auto;
 }
 
-.section {
-    padding: 25rem 0;
+.inner {
+    width: 92%;
+    margin: auto;
 }
-
-body {
-    height: 300vh;
-}
-
