--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -46,3 +46,51 @@ br {
         font-size: 1.7rem;
     }
 }
+
+.sp {
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1.4;
+    color: $blueF6;
+    display: flex;
+    align-items: center;
+    white-space: pre-line;
+    gap: .5rem;
+    @include bp640 {
+        font-size: 1.5rem;
+        margin-bottom: .8rem;
+    }
+    img {
+        width: 2.4rem;
+        height: 2.4rem;
+        @include bp640 {
+            width: 1.6rem;
+            height: 1.6rem;
+        }
+    }
+}
+
+.bp {
+    margin-bottom: 2rem;
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1.4;
+    color: $grey4B;
+    white-space: pre-line;
+    @include bp640 {
+        font-size: 2.4rem;
+        margin-bottom: 1rem;
+    }
+}
+
+.mp {
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1.5;
+    color: $grey84;
+    white-space: pre-line;
+    @include bp640 {
+        font-size: 1.5rem;
+    }
+}
