--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,4 +12,5 @@
 @import './layout/visual'; // 비쥬얼
 @import './layout/banner'; // 배너
 @import './layout/home'; // 홈
+@import './layout/remittance'; // 송금
 @import './layout/footer'; // 푸터
