--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -3,3 +3,12 @@
         @content;
     }
 }
+
+@mixin showTopAni($Sequence: 0) {
+    animation: showTopAnimation;
+    animation-duration: .5s;
+    animation-delay: $Sequence * 0.5s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+}
