Feat: loan 섹션 완성

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,4 +13,5 @@
 @import './layout/banner'; // 배너
 @import './layout/home'; // 홈
 @import './layout/remittance'; // 송금
+@import './layout/loan'; // 대출
 @import './layout/footer'; // 푸터
