--- a/src/styles/abstracts/_keyframes.scss
+++ b/src/styles/abstracts/_keyframes.scss
@@ -12,22 +12,18 @@
         transform: translate(-50%, -50%);
         opacity: 0;
     }
-
     25% {
         transform: translate(-50%, 0%);
         opacity: 1;
     }
-
     50% {
         transform: translate(-50%, -50%);
         opacity: 1;
-    }
-    
+    }    
     75% {
         transform: translate(-50%, 0%);
         opacity: 1;
     }
-
     100% {
         transform: translate(-50%, -50%);
         opacity: 0;
@@ -39,9 +35,26 @@
         opacity: 0;
         transform: translateY(50px);
     }
-
     100% {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes loanAnimation {
+    0% {
+        opacity: 0;
+    }
+    3% {
+        opacity: 1;
+    }
+    30% {
+        opacity: 1;
+    }
+    33% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
     }
 }
