Feat: credit 섹션 완성

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,10 +8,11 @@
 
 @import './components/button'; // 버튼
 
-@import './layout/header'; // 헤더
-@import './layout/visual'; // 비쥬얼
-@import './layout/banner'; // 배너
-@import './layout/home'; // 홈
-@import './layout/remittance'; // 송금
-@import './layout/loan'; // 대출
-@import './layout/footer'; // 푸터
+@import './layout/header'; // 헤더 영역
+@import './layout/visual'; // 비쥬얼 영역
+@import './layout/banner'; // 배너 영역
+@import './layout/home'; // 홈 영역
+@import './layout/remittance'; // 송금 영역
+@import './layout/loan'; // 대출 영역
+@import './layout/credit'; // 신용 영역
+@import './layout/footer'; // 푸터 영역
