--- a/src/styles/layout/_loan.scss
+++ b/src/styles/layout/_loan.scss
@@ -1,6 +1,9 @@
 .loan {
     .container {
         padding: 25rem 0;
+        @include bp640 {
+            padding: 10rem 0;
+        }
         .inner {
             position: relative;
             .title-wrap {
@@ -79,6 +82,9 @@
                     .sub-disc--btm {
                         opacity: 0;
                         margin-bottom: 3rem;
+                        @include bp640 {
+                            margin-bottom: 1.9rem;
+                        }
                         span {
                             color: $greyDB;
                         }
