--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,4 +15,6 @@
 @import './layout/remittance'; // 송금 영역
 @import './layout/loan'; // 대출 영역
 @import './layout/credit'; // 신용 영역
+@import './layout/investment'; // 투자 영역
+@import './layout/finance'; // 금융 영역
 @import './layout/footer'; // 푸터 영역
