Feat: management 영역 완성

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,4 +17,5 @@
 @import './layout/credit'; // 신용 영역
 @import './layout/investment'; // 투자 영역
 @import './layout/finance'; // 금융 영역
+@import './layout/management'; // 관리 영역
 @import './layout/footer'; // 푸터 영역
