--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,4 +18,6 @@
 @import './layout/investment'; // 투자 영역
 @import './layout/finance'; // 금융 영역
 @import './layout/management'; // 관리 영역
+@import './layout/service'; // 서비스 영역
+@import './layout/business'; // 사업 영역
 @import './layout/footer'; // 푸터 영역
