--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,14 +1,3 @@
-.button--primary {
-    width: 7.6rem;
-    height: 3rem;
-    font-size: 1.2rem;
-    border-radius: 1.5rem;
-    background-color: $blueF6;
-    text-align: center;
-    line-height: 3rem;
-    color: #f9fafb;
-}
-
 .btn {
     display: inline-flex;
     align-items: center;
@@ -25,4 +14,32 @@
         width: 2.4rem;
         height: 2.4rem;
     }    
+}
+
+.btn--down {
+    width: 7.6rem;
+    height: 3rem;
+    font-size: 1.2rem;
+    border-radius: 1.5rem;
+    background-color: $blueF6;
+    text-align: center;
+    line-height: 3rem;
+    color: #f9fafb;
+}
+
+
+.btn--primary {
+    transition: background-color .2s ease;
+    background-color: $blueF6;
+    font-weight: 600;
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    padding: 1.1rem 1.6rem;
+    font-size: 1.5rem;
+    color: #f9fafb;
+    border-radius: .7rem;
+    &:hover {
+        background-color: #1b64da;
+    }
 }
