--- a/src/styles/layout/_finance.scss
+++ b/src/styles/layout/_finance.scss
@@ -9,12 +9,22 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    @include bp640 {
+        height: 66.5rem;
+        background-size: contain;
+        background-image: url('../assets/section2_4_big_mobile.png');
+    }
     .text {
         font-size: 10rem;
         font-weight: 700;
         line-height: 1.3;
         color: $greyFB;
         text-align: center;
+        white-space: pre-line;
+        @include bp640 {
+            font-size: 5.5rem;
+            text-shadow: 0px 1px 20px rgba(0, 0, 0, 0.45);
+        }
     }
     .door-left {
         position: absolute;
