Feat: 스크롤 반응 애니메이션 추가

--- a/src/styles/layout/_investment.scss
+++ b/src/styles/layout/_investment.scss
@@ -49,6 +49,13 @@
                         bottom: 12.4rem;
                         left: 50%;
                         transform: translateX(-50%);
+                        .scr {
+                            opacity: 0;
+                            transition: .5s;
+                        }
+                        .scr-0 {
+                            opacity: 1;
+                        }
                         @include bp640 {
                             bottom: 8.3rem;
                         }
