--- a/src/styles/layout/_finance.scss
+++ b/src/styles/layout/_finance.scss
@@ -25,4 +25,20 @@
             text-shadow: 0px 1px 20px rgba(0, 0, 0, 0.45);
         }
     }
+    .left-door {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: calc((100vw - 104rem) / 2);
+        height: 100%;
+        background-color: $white;
+    }
+    .right-door {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: calc((100vw - 104rem) / 2);
+        height: 100%;
+        background-color: $white;
+    }
 }
