--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -2,7 +2,7 @@
     @media (min-width: 0) and (max-width: 640px) {
         @content;
     }
-}
+} // 브레이크 포인트 반응형 viewport 넓이
 
 @mixin showTopAni($Sequence: 0) {
     animation: showTopAnimation;
@@ -11,4 +11,4 @@
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
     animation-iteration-count: 1;
-}
+} // 스크롤 해당 영역 도착 시 실행되는 애니메이션
