Refactor: 상수 변수들 객체로 변경, animation css 축약형으로 변경

--- a/src/styles/abstracts/_keyframes.scss
+++ b/src/styles/abstracts/_keyframes.scss
@@ -19,7 +19,7 @@
     50% {
         transform: translate(-50%, -50%);
         opacity: 1;
-    }    
+    }
     75% {
         transform: translate(-50%, 0%);
         opacity: 1;
@@ -33,7 +33,7 @@
 @keyframes showTopAnimation {
     0% {
         opacity: 0;
-        transform: translateY(50px);
+        transform: translateY(5rem);
     }
     100% {
         opacity: 1;
