--- a/src/styles/layout/_credit.scss
+++ b/src/styles/layout/_credit.scss
@@ -71,7 +71,7 @@
                 }
                 .content-wrap {
                     img {
-                        @include showTopAni(1.5)
+                        @include showTopAni(1.5);
                     }
                     .text {
                         @include showTopAni(1);
