--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -2,18 +2,18 @@
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
-    gap: .6rem;
+    gap: 0.6rem;
     font-weight: 600;
     color: $white;
     padding: 1.1rem 1.4rem;
     font-size: 1.7rem;
     background-color: rgba(0, 12, 30, 0.8);
-    border-radius: .7rem;
+    border-radius: 0.7rem;
     line-height: 1.8rem;
     img {
         width: 2.4rem;
         height: 2.4rem;
-    }    
+    }
 }
 
 .btn--down {
@@ -27,9 +27,8 @@
     color: #f9fafb;
 }
 
-
 .btn--primary {
-    transition: background-color .2s ease;
+    transition: background-color 0.2s ease;
     background-color: $blueF6;
     font-weight: 600;
     display: inline-flex;
@@ -38,7 +37,7 @@
     padding: 1.1rem 1.6rem;
     font-size: 1.5rem;
     color: #f9fafb;
-    border-radius: .7rem;
+    border-radius: 0.7rem;
     &:hover {
         background-color: #1b64da;
     }
