--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -27,26 +27,25 @@
                     }
                     li {
                         font-size: 1.5rem;
-                        color: $grey84;  
+                        color: $grey84;
                         a {
                             display: flex;
                             line-height: 3rem;
                             &:hover {
                                 text-decoration: underline;
                             }
-                        }                      
+                        }
                     }
                     .title {
                         color: $greyC1;
                         font-weight: 700;
-                        padding-bottom: .5rem;
+                        padding-bottom: 0.5rem;
                         margin-bottom: 0;
                     }
                 }
                 .ft-customer {
                     flex: 1;
                 }
-                
             }
             .ft-address {
                 .company-name {
@@ -73,10 +72,10 @@
                 display: inline-grid;
                 grid-template-columns: repeat(4, auto);
                 column-gap: 3.4rem;
-                row-gap: .3rem;
+                row-gap: 0.3rem;
                 @include bp640 {
                     grid-template-columns: auto;
-                    row-gap: .6rem;
+                    row-gap: 0.6rem;
                 }
                 li {
                     font-size: 1.3rem;
@@ -95,12 +94,12 @@
             }
             .ft-social {
                 display: flex;
-                gap: .8rem;
+                gap: 0.8rem;
                 li {
                     width: 3.6rem;
                     height: 3.6rem;
-                    opacity: .7;
-                    transition: opacity .2s ease;
+                    opacity: 0.7;
+                    transition: opacity 0.2s ease;
                     &:hover {
                         opacity: 1;
                     }
@@ -108,4 +107,4 @@
             }
         }
     }
-}   
+}
