--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -22,8 +22,8 @@
                 @include bp640 {
                     display: flex;
                     align-items: center;
-                    width: 92%;    
-                    min-height: 6rem;            
+                    width: 92%;
+                    min-height: 6rem;
                 }
                 h1 {
                     a {
@@ -51,7 +51,7 @@
                         flex-direction: column;
                     }
                     li {
-                        padding: 0 .8rem;
+                        padding: 0 0.8rem;
                         white-space: nowrap;
                         @include bp640 {
                             padding: 0;
@@ -61,7 +61,7 @@
                             font-size: 1.5rem;
                             line-height: 2rem;
                             color: $grey68;
-                            border-radius: .8rem;
+                            border-radius: 0.8rem;
                             @include bp640 {
                                 padding: 1.8rem 2rem;
                                 border-radius: 0;
@@ -84,7 +84,7 @@
                         color: $greyC1;
                         font-size: 1.5rem;
                         line-height: 2rem;
-                        border-radius: .8rem;
+                        border-radius: 0.8rem;
                         @include bp640 {
                             padding: 1.8rem 2rem;
                         }
@@ -93,7 +93,7 @@
                         }
                     }
                     span {
-                        padding: 0 .8rem;
+                        padding: 0 0.8rem;
                         font-size: 1.6rem;
                         color: $greyDB;
                         @include bp640 {
@@ -118,20 +118,19 @@
                     margin-right: 1.2rem;
                 }
                 .menu-bars {
-                    padding: 0 .8rem;
+                    padding: 0 0.8rem;
                     height: 100%;
                     span {
                         display: inline-block;
                         width: 2.4rem;
                         height: 2.4rem;
-                        background-image: url('../assets/ico_bars.svg');
+                        background-image: url("../assets/ico_bars.svg");
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: cover;
                     }
                 }
             }
-
         }
     }
     &.on {
@@ -143,7 +142,7 @@
                 }
                 .mobile-btn {
                     span {
-                        background-image: url('../assets/ico_close.svg');
+                        background-image: url("../assets/ico_close.svg");
                     }
                 }
             }
