--- a/src/styles/layout/_investment.scss
+++ b/src/styles/layout/_investment.scss
@@ -51,7 +51,7 @@
                         transform: translateX(-50%);
                         .scr {
                             opacity: 0;
-                            transition: .5s;
+                            transition: 0.5s;
                         }
                         .scr-0 {
                             opacity: 1;
@@ -64,7 +64,7 @@
                             justify-content: space-between;
                             gap: 1.6rem;
                             @include bp640 {
-                                gap: .9rem;
+                                gap: 0.9rem;
                             }
                             img {
                                 width: 17.8rem;
@@ -106,9 +106,9 @@
                         color: $grey4B;
                         max-width: 22rem;
                     }
-                    .txt1{
+                    .txt1 {
                         opacity: 0;
-                        @include showTopAni(1)
+                        @include showTopAni(1);
                     }
                     .txt2 {
                         opacity: 0;
@@ -121,7 +121,7 @@
                     @include showTopAni(3);
                     @include bp640 {
                         font-size: 2rem;
-                        font-weight: 700;                        
+                        font-weight: 700;
                     }
                 }
             }
