--- a/src/styles/layout/_management.scss
+++ b/src/styles/layout/_management.scss
@@ -100,7 +100,7 @@
                         .title-wrap {
                             width: 100%;
                             .title {
-                                margin-bottom: .5rem;
+                                margin-bottom: 0.5rem;
                             }
                         }
                     }
@@ -160,8 +160,8 @@
                         }
                         .title-wrap {
                             flex: 1;
-                            .title {                                
-                                margin-bottom: .5rem;
+                            .title {
+                                margin-bottom: 0.5rem;
                                 @include bp640 {
                                     margin-bottom: 0;
                                 }
